--- a/BULK/protein.html
+++ b/BULK/protein.html
@@ -112,13 +112,7 @@
             <button class="button_wit"></button>
         </section>
 
-        <!--- trustpilot stukje --->
-        <section>
-            <!--- H??? --->
-            <img src="" alt="">
-            <!--- p??? zitten 2 verschillende teksten in --->
-            <img src="" alt="">
-        </section>
+        <!--- trustpilot stukje Geskipt ---> 
     </main>
 
 
@@ -143,19 +137,6 @@
             </ul>
         </section>
 
-        <!--- betaalmethoden --->
-        <section>
-            <ul>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-            </ul>
-        </section>
     </footer>
 </body>
 </html>
